# robo-paulinho

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  roadmap_geometria_vetorial_nbr12721.md  run_tests.sh
assets/: ABNT_NBR_12721-2006.xlsx
docs/: guia_preenchimento_nbr12721.md  inventario_formulas_xlsx.md  llm-fallback-policy.md  llm-provider-strategy.md  llm-response-contract.md  matriz_responsabilidade_campos.md
src/nbr12721/: __init__.py  __main__.py  config.py  cub.py  deterministic_extractor.py  llm.py  logging_setup.py  main.py  pdf_processing.py  pipeline.py  prompts.py  serialization.py
src/nbr12721/documents/: __init__.py  composite_region_detection.py  pdf_geometry.py  (+3 more)
tasks/: tasks de refatoração.txt  tasks feat openAI.txt
tests/: README.md  __init__.py  conftest.py  test_chamar_llm_routing.py  test_composite_region_detection.py  test_cub.py  test_deterministic_extractor.py  test_excel_audit.py  test_excel_formula_inventory.py  test_excel_writer.py  test_field_responsibility.py  test_formatacao.py  test_geometry_debug_svg.py  test_imports.py  test_llm_disponibilidade.py  test_llm_fallback_policy.py  test_llm_patch.py  test_llm_provider_config.py  test_llm_response_contract.py  test_logging.py  test_openai_api.py  test_pdf_geometry.py  test_pdf_processing.py  test_pipeline_exports.py  test_pipeline_modes.py  test_prompt_patch.py  test_region_debug_svg.py  test_region_detection.py  test_sem_hardcode_lote.py  test_serialization.py  test_validation.py  test_vector_classification.py  test_vector_classification_debug_svg.py
(+49 files in other folders)
