[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nbr12721"
version = "0.1.0"
description = "Preenchimento automatico ABNT NBR 12721:2006 a partir de PDFs"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
nbr12721 = "nbr12721.main:main"

[tool.setuptools.packages.find]
where = ["src"]
